// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kpi-filters Renders \`kpi-filters\` with default props 1`] = `
<div
  class="layout column"
>
  <span
    class="pl-4"
  >
    Here the filter patterns for additional slices of data for counters and ratings can be added.
  </span>
  <kpi-filters-list-stub
    filters=""
    options="[object Object]"
    totalitems="0"
  />
</div>
`;

exports[`kpi-filters Renders \`kpi-filters\` with full permissions 1`] = `
<div
  class="layout column"
>
  <span
    class="pl-4"
  >
    Here the filter patterns for additional slices of data for counters and ratings can be added.
  </span>
  <kpi-filters-list-stub
    duplicable="true"
    filters=""
    options="[object Object]"
    removable="true"
    totalitems="10"
    updatable="true"
  />
</div>
`;
